# traffic-switcher

./: CLAUDE.md  Cargo.toml  Dockerfile  INSTALL.md  README.md  config.example.yaml  config.yaml.example  cspell.json
.github/workflows/: build-binaries.yml  ci.yml  release.yml
cli/: Cargo.toml  README.md
cli/src/: command.rs  context.rs  main.rs
cli/src/commands/: mod.rs  port.rs  start.rs  status.rs  stop.rs
contrib/docker/: docker-compose.example.yml
contrib/init.d/: traffic-switcher
contrib/systemd/: traffic-switcher.service
scripts/: deploy.sh  install-macos.sh  install-ubuntu.sh  uninstall-macos.sh  uninstall-ubuntu.sh
src/: main.rs
src/env/: app.rs  state.rs
src/routes/: app.rs  mod.rs  proxy.rs  static_files.rs
src/routes/config/: index.rs  mod.rs  port.rs  reload.rs
