[workspace]
members = [".", "cli"]

[package]
name = "traffic_switcher"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
dotenv = "0.15.0"
env_logger = "0.11.6"
http-body-util = "0.1.2"
hyper = { version = "1.6.0", features = ["full"] }
hyper-util = { version = "0.1.16", features = ["full"] }
log = "0.4.25"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.142"
serde_yaml = "0.9.34"
tokio = { version = "1.43.0", features = [
    "rt-multi-thread",
    "macros",
    "signal",
    "fs",
] }
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.5.2", features = [
    "trace",
    "fs",
    "compression-full",
    "cors",
] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
mime_guess = "2.0"
percent-encoding = "2.1"
