[package]
name = "tsctl"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.43.0", features = ["macros", "process", "fs"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.142"
serde_yaml = "0.9.34"
reqwest = { version = "0.12.12", features = ["json"] }
anyhow = "1.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
colored = "3.0.0"
async-trait = "0.1"
nix = { version = "0.29", features = ["signal", "process"] }

traffic_switcher = { path = "../" }
